# trajecmp

./: .gitignore  CMakeLists.txt  README.md  doc.md
.conan/: .gitignore  conanfile.txt
doc/: concept.md  doc.md  examples.md  gestures-advanced.md  gestures-basics.md  gestures-implementation.md  how-to-build.md  system.md  terminology.md  user-stories.md
doc/example/: sdl2-match-rectangle-while-drawing.md  sdl2-rectangle-in-circle.md
doc/src/: diagrams.draw.io.xml
doc/src/algorithm/: begin-closed-trajectory-at-any-point.draw.io.xml  match-while-drawing.draw.io.xml  position-size-orientation-dependend.draw.io.xml
example/: DistinctColorSet.hpp  TrajectorySvg.hpp  boost_geometry_equals_bug.cpp  boost_optional.cpp  distance-info-example.cpp  example.cpp  generate_svg.cpp  iterate_coordinates.cpp  logging.hpp  miniball_boost_geometry_example.cpp  miniball_example_containers.cpp  rx-example.cpp  trajecmp-example.cpp
example/sdl2/: CMakeLists.txt
example/sdl2/app/: sdl2-circle-or-rectangle.cpp  sdl2-count-circles.cpp  sdl2-example.cpp  sdl2-match-rectangle-while-drawing.cpp  sdl2-rectangle-in-circle.cpp  sdl2-rectangle.cpp  sdl2-triangle.cpp  sdl2-ttf-example.cpp
example/sdl2/cmake/modules/: FindSDL2GFX.cmake
example/sdl2/include/: color.hpp  debug.hpp  draw.hpp  font.hpp  model.hpp  notification_box.hpp  pattern.hpp  pattern_matching.hpp  record_trajectory_sdl2_framework.hpp  sdl2_framework.hpp  text_renderer.hpp
example/sdl2/src/: draw.cpp  model.cpp  notification_box.cpp  record_trajectory_sdl2_framework.cpp  sdl2-count-circles.cpp  sdl2-estimate-center-of-circle-segment.cpp  sdl2-example.cpp  sdl2-line-example.cpp  sdl2-rectangle.cpp  sdl2_framework.cpp  text_renderer.cpp
example/wasm/: compile.sh  run.sh
example/wasm/.conan/: .gitignore  conanfile.txt
example/wasm/public/: .gitignore  CNAME  shell.css
example/wasm/src/: color.hpp  index.cpp  input.h  input.hpp  model.hpp  pattern.hpp  pattern_matching.hpp  shell.html
src/: CoordinateAccessor.h  Distance.cpp  Distance.h  DistinctColorSet.cpp  DistinctColorSet.h  EventRegister.h  MinBoundingSphere.h  TrajectorySvg.h  boost_geometry_to_string.h  boost_optional.cpp  coordinate_iterator.h  distance.h  example.cpp  generate_svg.cpp  iterate_coordinates.cpp  miniball_boost_geometry_example.cpp  miniball_example_containers.cpp
src/trajecmp/algorithm/: find_index.hpp  minmax_index.hpp
src/trajecmp/distance/: average_distance_to_point.hpp  distance_info.hpp  distances_to_point.hpp  distances_to_start.hpp  modified_hausdorff.hpp
src/trajecmp/functional/: functional.hpp
src/trajecmp/geometry/: min_bounding_box.hpp  point.hpp
src/trajecmp/geometry/point/: arithmetic.hpp  point.hpp
src/trajecmp/gesture/: circle.hpp  rectangle.hpp
src/trajecmp/model/: point.hpp  quaternion.hpp
src/trajecmp/predicate/: has_min_num_points.hpp
src/trajecmp/range/: range.hpp  to_trajectory.hpp
src/trajecmp/trait/: concept.hpp
src/trajecmp/trajectory/: circle.hpp  rectangle.hpp
src/trajecmp/transform/: close.hpp  map_coordinates.hpp  rearrange_closed_trajectory.hpp  rotate.hpp  scale.hpp  sub_trajectory.hpp  translate.hpp  translate_and_scale.hpp
src/trajecmp/util/: angle.hpp  find_local_extrema.hpp  inline_variable.hpp  type_traits.hpp  vector_ostream.hpp
test/: BoostGeometryTest.cpp  BoostGeometryTest.h  CatchTest.cpp  DistanceTest.cpp  DistanceTest.h  TestBase.h  boost_geometry_to_string.h  distance_test.cpp  find_local_extrema_test.cpp  logging.h  matchers.hpp  matchers_test.cpp  quaternion_rotation_test.cpp  testsuite.cc
test/trajecmp/algorithm/: find_index_test.cpp  minmax_index_test.cpp
test/trajecmp/distance/: distance_info_test.cpp  modified_hausdorff_test.cpp
test/trajecmp/geometry/point/: point_test.cpp
test/trajecmp/gesture/: circle_test.cpp  rectangle_test.cpp
test/trajecmp/model/: point_test.cpp  quaternion_test.cpp
test/trajecmp/range/: range_test.cpp
test/trajecmp/transform/: rotate_test.cpp  sub_trajectory_test.cpp
test/trajecmp/util/: angle_test.cpp  find_local_extrema_test.cpp
